--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5"
+    },
+    "scripts": {
+        "test": "phpunit --colors=always --testdox"
     }
 }
