PCT removed because it became a disaster.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "php": ">=8.3.0"
     },
     "require-dev": {
+        "mockery/mockery": "^1.6",
         "phpunit/phpunit": "^11.5"
     },
     "scripts": {
